[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/progressbar/barHorizontal_yellow_mid 200.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/C64_font_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/progressbar/glassPanel_200.png" type="Texture" id=3]
[ext_resource path="res://GameUI/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/C64_font_medium.tres" type="DynamicFont" id=5]
[ext_resource path="res://GameUI/LevelUp.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/progressbar/barHorizontal_red_mid 200.png" type="Texture" id=7]
[ext_resource path="res://GameUI/PauseButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://GameUI/PauseMenu.tscn" type="PackedScene" id=9]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="StatusContainer" type="CenterContainer" parent="."]
margin_right = 1024.0

[node name="MainArranger" type="HBoxContainer" parent="StatusContainer"]
margin_left = 185.0
margin_right = 838.0
margin_bottom = 46.0

[node name="LevelXPArranger" type="VBoxContainer" parent="StatusContainer/MainArranger"]
margin_right = 234.0
margin_bottom = 46.0
alignment = 1

[node name="XPContainer" type="HBoxContainer" parent="StatusContainer/MainArranger/LevelXPArranger"]
margin_right = 234.0
margin_bottom = 26.0

[node name="XPBar" type="TextureProgress" parent="StatusContainer/MainArranger/LevelXPArranger/XPContainer"]
margin_right = 200.0
margin_bottom = 26.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 1 )

[node name="Spacer" type="Label" parent="StatusContainer/MainArranger/LevelXPArranger/XPContainer"]
margin_left = 204.0
margin_top = 6.0
margin_right = 216.0
margin_bottom = 20.0
text = "   "

[node name="XPLabel" type="Label" parent="StatusContainer/MainArranger/LevelXPArranger/XPContainer"]
margin_left = 220.0
margin_top = 5.0
margin_right = 234.0
margin_bottom = 21.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="StatusContainer/MainArranger/LevelXPArranger"]
margin_top = 30.0
margin_right = 234.0
margin_bottom = 46.0

[node name="Level" type="Label" parent="StatusContainer/MainArranger/LevelXPArranger/CenterContainer"]
margin_left = 66.0
margin_right = 168.0
margin_bottom = 16.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Level: 1"

[node name="Spacer" type="Label" parent="StatusContainer/MainArranger"]
margin_left = 238.0
margin_top = 16.0
margin_right = 278.0
margin_bottom = 30.0
text = "          "

[node name="TimeLabel" type="Label" parent="StatusContainer/MainArranger"]
margin_left = 282.0
margin_top = 11.0
margin_right = 405.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 5 )
text = "0:00:00"

[node name="Spacer2" type="Label" parent="StatusContainer/MainArranger"]
margin_left = 409.0
margin_top = 16.0
margin_right = 449.0
margin_bottom = 30.0
text = "          "

[node name="LivesContainer" type="HBoxContainer" parent="StatusContainer/MainArranger"]
margin_left = 453.0
margin_right = 653.0
margin_bottom = 46.0

[node name="Arranger" type="VBoxContainer" parent="StatusContainer/MainArranger/LivesContainer"]
margin_right = 200.0
margin_bottom = 46.0

[node name="LivesBar" type="TextureProgress" parent="StatusContainer/MainArranger/LivesContainer/Arranger"]
margin_right = 200.0
margin_bottom = 26.0
max_value = 30.0
value = 30.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="StatusContainer/MainArranger/LivesContainer/Arranger"]
margin_top = 30.0
margin_right = 200.0
margin_bottom = 46.0

[node name="LivesLabel" type="Label" parent="StatusContainer/MainArranger/LivesContainer/Arranger/CenterContainer"]
margin_left = 35.0
margin_right = 165.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Lives: 100"

[node name="MainTimer" type="Timer" parent="."]

[node name="LevelUp" parent="." instance=ExtResource( 6 )]
pause_mode = 2
visible = false
anchor_right = 0.0
anchor_bottom = 0.0

[node name="PauseButton" parent="." instance=ExtResource( 8 )]
pause_mode = 2
margin_left = 924.0

[node name="PauseMenu" parent="." instance=ExtResource( 9 )]
pause_mode = 2
visible = false

[connection signal="timeout" from="MainTimer" to="." method="_on_MainTimer_timeout"]
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
